build/log/idf_py_stdout_output_20641
[1/17] Performing build step for 'bootloader'
[1/1] cd /home/nhat/esp/myGUI/build/bootloader/esp-idf/esptool_py && /home/nhat/.espressif/python_env/idf5.1_py3.8_env/bin/python /home/nhat/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/nhat/esp/myGUI/build/bootloader/bootloader.bin
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[2/17] No install step for 'bootloader'
[3/17] Building C object esp-idf/esp_lcd/CMakeFiles/__idf_esp_lcd.dir/src/esp_lcd_panel_ops.c.obj
[4/17] Completed 'bootloader'
[5/17] Building C object esp-idf/esp_lcd/CMakeFiles/__idf_esp_lcd.dir/src/esp_lcd_panel_st7789.c.obj
[6/17] Building C object esp-idf/esp_lcd/CMakeFiles/__idf_esp_lcd.dir/src/esp_lcd_panel_nt35510.c.obj
[7/17] Building C object esp-idf/espressif__esp_lcd_ili9341/CMakeFiles/__idf_espressif__esp_lcd_ili9341.dir/esp_lcd_ili9341.c.obj
FAILED: esp-idf/espressif__esp_lcd_ili9341/CMakeFiles/__idf_espressif__esp_lcd_ili9341.dir/esp_lcd_ili9341.c.obj 
/home/nhat/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/nhat/esp/myGUI/build/config -I/home/nhat/esp/myGUI/components/espressif__esp_lcd_ili9341/include -I/home/nhat/esp/esp-idf/components/newlib/platform_include -I/home/nhat/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/nhat/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/nhat/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/nhat/esp/esp-idf/components/freertos/esp_additions/include -I/home/nhat/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/nhat/esp/esp-idf/components/esp_hw_support/include -I/home/nhat/esp/esp-idf/components/esp_hw_support/include/soc -I/home/nhat/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/nhat/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/nhat/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/nhat/esp/esp-idf/components/heap/include -I/home/nhat/esp/esp-idf/components/log/include -I/home/nhat/esp/esp-idf/components/soc/include -I/home/nhat/esp/esp-idf/components/soc/esp32 -I/home/nhat/esp/esp-idf/components/soc/esp32/include -I/home/nhat/esp/esp-idf/components/hal/esp32/include -I/home/nhat/esp/esp-idf/components/hal/include -I/home/nhat/esp/esp-idf/components/hal/platform_port/include -I/home/nhat/esp/esp-idf/components/esp_rom/include -I/home/nhat/esp/esp-idf/components/esp_rom/include/esp32 -I/home/nhat/esp/esp-idf/components/esp_rom/esp32 -I/home/nhat/esp/esp-idf/components/esp_common/include -I/home/nhat/esp/esp-idf/components/esp_system/include -I/home/nhat/esp/esp-idf/components/esp_system/port/soc -I/home/nhat/esp/esp-idf/components/esp_system/port/include/private -I/home/nhat/esp/esp-idf/components/xtensa/include -I/home/nhat/esp/esp-idf/components/xtensa/esp32/include -I/home/nhat/esp/esp-idf/components/lwip/include -I/home/nhat/esp/esp-idf/components/lwip/include/apps -I/home/nhat/esp/esp-idf/components/lwip/include/apps/sntp -I/home/nhat/esp/esp-idf/components/lwip/lwip/src/include -I/home/nhat/esp/esp-idf/components/lwip/port/include -I/home/nhat/esp/esp-idf/components/lwip/port/freertos/include -I/home/nhat/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/nhat/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/nhat/esp/esp-idf/components/driver/include -I/home/nhat/esp/esp-idf/components/driver/deprecated -I/home/nhat/esp/esp-idf/components/driver/analog_comparator/include -I/home/nhat/esp/esp-idf/components/driver/dac/include -I/home/nhat/esp/esp-idf/components/driver/gpio/include -I/home/nhat/esp/esp-idf/components/driver/gptimer/include -I/home/nhat/esp/esp-idf/components/driver/i2c/include -I/home/nhat/esp/esp-idf/components/driver/i2s/include -I/home/nhat/esp/esp-idf/components/driver/ledc/include -I/home/nhat/esp/esp-idf/components/driver/mcpwm/include -I/home/nhat/esp/esp-idf/components/driver/parlio/include -I/home/nhat/esp/esp-idf/components/driver/pcnt/include -I/home/nhat/esp/esp-idf/components/driver/rmt/include -I/home/nhat/esp/esp-idf/components/driver/sdio_slave/include -I/home/nhat/esp/esp-idf/components/driver/sdmmc/include -I/home/nhat/esp/esp-idf/components/driver/sigma_delta/include -I/home/nhat/esp/esp-idf/components/driver/spi/include -I/home/nhat/esp/esp-idf/components/driver/temperature_sensor/include -I/home/nhat/esp/esp-idf/components/driver/touch_sensor/include -I/home/nhat/esp/esp-idf/components/driver/twai/include -I/home/nhat/esp/esp-idf/components/driver/uart/include -I/home/nhat/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/nhat/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/nhat/esp/esp-idf/components/esp_pm/include -I/home/nhat/esp/esp-idf/components/esp_ringbuf/include -I/home/nhat/esp/esp-idf/components/esp_lcd/include -I/home/nhat/esp/esp-idf/components/esp_lcd/interface -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/nhat/esp/myGUI=. -fmacro-prefix-map=/home/nhat/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -DESP_LCD_ILI9341_VER_MAJOR=1 -DESP_LCD_ILI9341_VER_MINOR=2 -DESP_LCD_ILI9341_VER_PATCH=0 -MD -MT esp-idf/espressif__esp_lcd_ili9341/CMakeFiles/__idf_espressif__esp_lcd_ili9341.dir/esp_lcd_ili9341.c.obj -MF esp-idf/espressif__esp_lcd_ili9341/CMakeFiles/__idf_espressif__esp_lcd_ili9341.dir/esp_lcd_ili9341.c.obj.d -o esp-idf/espressif__esp_lcd_ili9341/CMakeFiles/__idf_espressif__esp_lcd_ili9341.dir/esp_lcd_ili9341.c.obj -c /home/nhat/esp/myGUI/components/espressif__esp_lcd_ili9341/esp_lcd_ili9341.c
/home/nhat/esp/myGUI/components/espressif__esp_lcd_ili9341/esp_lcd_ili9341.c:180:37: error: 'vendor_specific_init_default' defined but not used [-Werror=unused-const-variable=]
  180 | static const ili9341_lcd_init_cmd_t vendor_specific_init_default[] = {
      |                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
[8/17] Building C object esp-idf/esp_lcd/CMakeFiles/__idf_esp_lcd.dir/src/esp_lcd_panel_io_spi.c.obj
[9/17] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
/home/nhat/esp/myGUI/main/main.c:51: warning: "LCD_COLOR_SPACE" redefined
   51 | #define LCD_COLOR_SPACE             (ESP_LCD_COLOR_SPACE_RGB)
      | 
/home/nhat/esp/myGUI/main/main.c:37: note: this is the location of the previous definition
   37 | #define LCD_COLOR_SPACE             (ESP_LCD_COLOR_SPACE_BGR)
      | 
/home/nhat/esp/myGUI/main/main.c: In function 'bsp_display_new':
/home/nhat/esp/myGUI/main/main.c:187:23: warning: initialized field overwritten [-Woverride-init]
  187 |         .rgb_endian = LCD_RGB_ELEMENT_ORDER_RGB,
      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/nhat/esp/myGUI/main/main.c:187:23: note: (near initialization for 'panel_config.<anonymous>.rgb_endian')
/home/nhat/esp/myGUI/main/main.c:51:37: warning: initialized field overwritten [-Woverride-init]
   51 | #define LCD_COLOR_SPACE             (ESP_LCD_COLOR_SPACE_RGB)
      |                                     ^
/home/nhat/esp/myGUI/main/main.c:190:24: note: in expansion of macro 'LCD_COLOR_SPACE'
  190 |         .color_space = LCD_COLOR_SPACE,
      |                        ^~~~~~~~~~~~~~~
/home/nhat/esp/myGUI/main/main.c:51:37: note: (near initialization for 'panel_config.<anonymous>.color_space')
   51 | #define LCD_COLOR_SPACE             (ESP_LCD_COLOR_SPACE_RGB)
      |                                     ^
/home/nhat/esp/myGUI/main/main.c:190:24: note: in expansion of macro 'LCD_COLOR_SPACE'
  190 |         .color_space = LCD_COLOR_SPACE,
      |                        ^~~~~~~~~~~~~~~
/home/nhat/esp/myGUI/main/main.c: At top level:
/home/nhat/esp/myGUI/main/main.c:62:19: warning: 'lvgl_disp' defined but not used [-Wunused-variable]
   62 | static lv_disp_t *lvgl_disp = NULL;
      |                   ^~~~~~~~~
/home/nhat/esp/myGUI/main/main.c:59:31: warning: 'lcd_panel' defined but not used [-Wunused-variable]
   59 | static esp_lcd_panel_handle_t lcd_panel = NULL;
      |                               ^~~~~~~~~
/home/nhat/esp/myGUI/main/main.c:58:34: warning: 'lcd_io' defined but not used [-Wunused-variable]
   58 | static esp_lcd_panel_io_handle_t lcd_io = NULL;
      |                                  ^~~~~~
ninja: build stopped: subcommand failed.
